Added Itachi's signature smirk image

--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,9 @@
 <body>
 
 <h1>Hello!</h1>
+<div><img src="itachi.jpg" alt="sharingan" style="width: 50%; max-width: 960px"></div>
 <p>This is Marnel &lt;3</p>
+
+<div><img src="itachismirk.jpg" alt="hmh" style="width: 50%; max-width: 960px"></div>
 </body>
 </html>
